src/Compiler/Analyzer/AuroraParser.cs
using AuroraScript.Compiler.Ast;
using AuroraScript.Compiler.Ast.Expressions;
using AuroraScript.Compiler.Ast.Statements;
using AuroraScript.Compiler.Backend.Code;
using AuroraScript.Runtime;
using AuroraScript.Runtime.Serialization;
using AuroraScript.Source;
using AuroraScript.Tokens;
using System;
using System.Buffers;
using System.Collections.Generic;
using System.Runtime.CompilerServices;
using System.Text;

namespace AuroraScript.Compiler.Analyzer
{

    internal enum ScopeType { MODULE, FOR, BLOCK, GROUP, FUNCTION }

    internal class ScopeStack : IDisposable
    {
        private ScopeType[] scopeStack = new ScopeType[16];
        private int count;
        public ScopeType Current => scopeStack[count - 1];
        public int Count => count;
        public ScopeType this[int index] => scopeStack[index];

        public ScopeStack Scope(ScopeType type)
        {
            if (count == scopeStack.Length)
            {
                Array.Resize(ref scopeStack, scopeStack.Length * 2);
            }
            scopeStack[count++] = type;
            return this;
        }

        public void Dispose()
        {
            count--;
        }
    }

    internal class AuroraParser
    {
        private sealed class SourceFileVisitor : IAstVisitor
        {
            private string _fileName;

            public void Apply(AstNode node, string fileName)
            {
                _fileName = fileName;
                node?.Accept(this);
            }

            protected override void BeforeVisitNode(AstNode node)
            {
                var range = node.Range;
                if (String.IsNullOrEmpty(range.FileName))
                {
                    range.FileName = _fileName;
                    node.Range = range;
                }
            }

            protected override void VisitArrayDestructuringPattern(ArrayDestructuringPattern node)
            {
                for (int i = 0; i < node.Elements.Count; i++) node.Elements[i]?.Accept(this);
            }

            protected override void VisitMapExpression(MapExpression node)
            {
                for (int i = 0; i < node.Entries.Count; i++)
                {
                    var entry = node.Entries[i];
                    if (entry is MapKeyValueExpression keyValue)
                    {
                        keyValue.Value?.Accept(this);
                    }
                    else
                    {
                        entry?.Accept(this);
                    }
                }
            }

            protected override void VisitEnumDeclaration(EnumDeclaration node)
            {
                if (node.Elements == null) return;
                for (int i = 0; i < node.Elements.Count; i++)
                {
                    var element = node.Elements[i];
                    var range = element.Range;
                    if (String.IsNullOrEmpty(range.FileName))
                    {
                        range.FileName = _fileName;
                        element.Range = range;
                    }
                }
            }
        }

        public AuroraLexer Lexer { get; private set; }
        public ModuleDeclaration Root { get; private set; }

        private readonly ScopeStack scopeStack = new ScopeStack();
        private readonly SourceFileVisitor _sourceFileVisitor = new SourceFileVisitor();

        private readonly EngineOptions _options;
        private List<TDocPathSegment> _tdocPath;
        private bool _allowTDocInterpolation = true;
        private bool _seenEffectiveModuleStatement;
        private bool _seenExplicitModuleMetadata;

        public AuroraParser(AuroraLexer lexer, EngineOptions options)
        {
            _options = options;
            this.Lexer = lexer;
            this.Root = new ModuleDeclaration(this.Lexer.SourceReference);
        }

        public ModuleDeclaration Parse()
        {
            using (scopeStack.Scope(ScopeType.MODULE))
            {
                while (true)
                {
                    if (this.Lexer.TestNext(Symbols.KW_EOF)) break;
                    var statementSymbol = this.Lexer.PeekSymbol();
                    // Use recursion for statements
                    var node = ParseStatement();

                    if (node == null)
                    {
                        if (statementSymbol == Symbols.PT_SEMICOLON)
                        {
                            _seenEffectiveModuleStatement = true;
                        }
                        continue;
                    }

                    node.IsIndependent = true;

                    if (node is ModuleMetaStatement meta)
                    {
                        if (meta.Name.Value == "module" && this.Root.IsGlobalDeclarationFile)
                        {
                            throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, meta.Name, "@global() declaration files cannot also declare @module metadata.");
                        }

                        if (meta.Name.Value == "module" && _seenEffectiveModuleStatement)
                        {
                            throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, meta.Name, "@module metadata must be the first effective statement in a module.");
                        }

                        if (meta.Name.Value == "module")
                        {
                            if (this.Root.IsGlobalDeclarationFile)
                            {
                                throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, meta.Name, "@global() declaration files cannot also declare @module metadata.");
                            }

                            _seenExplicitModuleMetadata = true;
                            this.Root.MetaInfos[meta.Name.Value] = meta.Value?.Value;
                            this.Root.ModuleName = meta.Value?.Value;
                        }
                        else if (meta.Name.Value == "global")
                        {
                            if (_seenEffectiveModuleStatement)
                            {
                                throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, meta.Name, "@global() metadata must be the first effective statement in a file.");
                            }

                            if (_seenExplicitModuleMetadata)
                            {
                                throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, meta.Name, "@global() declaration files cannot also declare @module metadata.");
                            }

                            if (this.Root.MetaInfos.ContainsKey("module"))
                            {
                                this.Root.MetaInfos.Remove("module");
                            }

                            this.Root.MetaInfos[meta.Name.Value] = true;
                            this.Root.IsGlobalDeclarationFile = true;
                            this.Root.ModuleName = null;
                        }
                        else
                        {
                            this.Root.MetaInfos[meta.Name.Value] = meta.Value?.Value;
                        }
                    }
                    else if (node is FunctionTypeDeclaration functionType)
                    {
                        RejectGlobalNonDeclareStatement(node);
                        if (!this.Root.AddFunctionType(functionType))
                        {
                            throw new AuroraCompilationException(
                                AuroraCompilationStage.Parsing,
                                Lexer.FullPath,
                                functionType.Name,
                                $"Duplicate function type declaration '{functionType.Name.Value}'.");
                        }
                    }
                    else if (node is FunctionDeclaration func)
                    {
                        RejectGlobalNonDeclareStatement(node);
                        this.Root.AddFunction(func);
                        func.Parent = this.Root;
                    }
                    else if (node is ImportDeclaration importDeclaration)
                    {
                        RejectGlobalNonDeclareStatement(node);
                        this.Root.AddImport(importDeclaration);
                        importDeclaration.Parent = Root;
                    }
                    else if (node is TypeDeclaration typeDeclaration)
                    {
                        RejectGlobalNonDeclareStatement(node);
                        if (!this.Root.AddType(typeDeclaration))
                        {
                            throw new AuroraCompilationException(
                                AuroraCompilationStage.Parsing,
                                Lexer.FullPath,
                                typeDeclaration.Name,
                                $"Duplicate type declaration '{typeDeclaration.Name.Value}'.");
                        }
                    }
                    else if (node is AmbientDeclaration ambientDeclaration)
                    {
                        if (!this.Root.AddAmbientDeclaration(ambientDeclaration))
                        {
                            throw new AuroraCompilationException(
                                AuroraCompilationStage.Parsing,
                                Lexer.FullPath,
                                ambientDeclaration.Name,
                                $"Duplicate ambient declaration '{ambientDeclaration.Name.Value}'.");
                        }
                    }
                    else if (node is ContextDeclaration contextDeclaration)
                    {
                        RejectGlobalNonDeclareStatement(node);
                        if (!this.Root.AddContext(contextDeclaration))
                        {
                            throw new AuroraCompilationException(
                                AuroraCompilationStage.Parsing,
                                Lexer.FullPath,
                                contextDeclaration.Name,
                                $"Duplicate context declaration '{contextDeclaration.Name.Value}'.");
                        }
                    }
                    else
                    {
                        RejectGlobalNonDeclareStatement(node);
                        this.Root.AddStatement(node);
                    }

                    _seenEffectiveModuleStatement = true;
                }
                ValidateFunctionTypeNames();
                ValidateTypeReferences();
                SetSourceRecursive(this.Root);
            }
            if (scopeStack.Count > 0)
            {
                throw new AuroraCompilationException(AuroraCompilationStage.Parsing, Lexer.FullPath, Token.EOF, "An premature ending statement.");
            }
            this.Lexer.Dispose();
            return this.Root;
        }

        /// <summary>
        /// Parses a standalone <c>.tdoc</c> document. The document starts
        /// directly with the TDoc root value (for example
        /// <c>Object { name "Aurora" }</c>) and is represented as a synthetic
        /// expression statement so language-service consumers can reuse the
        /// normal AST traversal and source ranges.
        /// </summary>
        public ModuleDeclaration ParseTDocDocument()
        {
            var previousInterpolationMode = _allowTDocInterpolation;
            _allowTDocInterpolation = false;
            try
            {
                using (scopeStack.Scope(ScopeType.MODULE))
                {
                    var value = ParseTDocValue();
                    if (value == null)
                    {
                        throw new AuroraCompilationException(
                            AuroraCompilationStage.Parsing,
                            Lexer.FullPath,
                            Lexer.LookAtHead(),
                            "A TDoc document requires a root value.");
                    }

                    // A terminator is optional in a standalone document, but
                    // accepting one keeps generated documents convenient.
                    Lexer.TestNext(Symbols.PT_SEMICOLON);
                    if (!Lexer.TestSymbol(Symbols.KW_EOF))
                    {
                        throw new AuroraCompilationException(
                            AuroraCompilationStage.Parsing,
                            Lexer.FullPath,
                            Lexer.LookAtHead(),
                            "A TDoc document must contain exactly one root value.");
                    }

                    var statement = new ExpressionStatement(value)
                    {
                        IsIndependent = true,
                        Range = value.Range
                    };
                    Root.AddStatement(statement);
                    SetSourceRecursive(Root);
                }

                Lexer.Expect(Symbols.KW_EOF);
                Lexer.Dispose();
                return Root;
            }
            finally
            {
                _allowTDocInterpolation = previousInterpolationMode;
            }
        }

        private bool _parsingBlock;

        public BlockStatement ParseBlockBody()
        {
            _parsingBlock = true;
            using (scopeStack.Scope(ScopeType.FUNCTION))
            {
                var block = new BlockStatement { IsFunction = true };
                var sawBody = false;
                while (true)
                {
                    if (this.Lexer.TestNext(Symbols.KW_EOF)) break;
                    if (this.Lexer.PeekSymbol() == Symbols.KW_IMPORT && !sawBody)
                    {
                        Root.AddImport((ImportDeclaration)ParseImport());
                        continue;
                    }
                    RejectModuleOnlyBlockStatement();
                    var node = ParseStatement();
                    if (node == null) continue;
                    sawBody = true;

                    node.IsIndependent = true;
                    if (node is FunctionDeclaration func)
                    {
                        block.AddFunction(func);
                        func.Parent = block;
                    }
                    else
                    {
                        block.AddStatement(node);
                    }
                }
                SetSourceRecursive(block);
                this.Lexer.Dispose();
                return block;
            }
        }

        private void RejectModuleOnlyBlockStatement()
        {
            var symbol = this.Lexer.PeekSymbol();
            if (symbol == null || symbol == Symbols.KW_EOF)
            {
                return;
            }

            if (symbol == Symbols.PT_METAINFO ||
                symbol == Symbols.KW_IMPORT ||
                symbol == Symbols.KW_INCLUDE ||
                symbol == Symbols.KW_EXPORT ||
                symbol == Symbols.KW_DECLARE ||
                symbol == Symbols.KW_CONTEXT ||
                IsTypeDeclarationStart())
            {
                var token = this.Lexer.LookAtHead();
                throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, token, $"CompileBlock does not support module-level statement '{token.Value}'.");
            }
        }

        private Statement ParseStatement()
        {
            if (_parsingBlock) RejectModuleOnlyBlockStatement();
            var symbol = this.Lexer.PeekSymbol();
            if (this.Lexer.IsAtEnd) return null;

            if (symbol == Symbols.PT_SEMICOLON)
            {
                this.Lexer.Expect(Symbols.PT_SEMICOLON);
                return null;
            }

            if (symbol == Symbols.PT_METAINFO) { var res = ParseMetaInfo(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.PT_LEFTBRACE) { var res = ParseBlock(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_IMPORT) { var res = ParseImport(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_INCLUDE) { var res = ParseInclude(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_CONTEXT) { var res = ParseContextDeclaration(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_EXPORT) { var res = ParseExportStatement(); if (res != null) res.IsIndependent = true; return res; }
            if (IsFunctionTypeDeclarationStart()) { var res = ParseFunctionTypeDeclaration(MemberAccess.Internal); if (res != null) res.IsIndependent = true; return res; }
            if (IsTypeDeclarationStart()) { var res = ParseTypeDeclaration(MemberAccess.Internal); if (res != null) res.IsIndependent = true; return res; }
            if (IsNativeFunctionDeclarationStart()) { var res = ParseNativeFunctionDeclaration(MemberAccess.Internal); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_FUNC) { var res = ParseFunctionDeclaration(MemberAccess.Internal); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_DECLARE) { var res = ParseDeclare(MemberAccess.Internal); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_CONST || symbol == Symbols.KW_VAR) { var res = ParseVariableDeclaration(MemberAccess.Internal); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_ENUM) { var res = ParseEnumDeclaration(MemberAccess.Internal); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_FOR) { var res = ParseForBlock(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_WHILE) { var res = ParseWhileBlock(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_IF) { var res = ParseIfBlock(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_CONTINUE) { var res = ParseContinueStatement(); if (res != null) res.IsIndependent = true; return res; }

            if (symbol == Symbols.KW_BREAK) { var res = ParseBreakStatement(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_RETURN) { var res = ParseReturnStatement(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_THROW) { var res = ParseThrowStatement(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_TRY) { var res = ParseTryStatement(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_DELETE) { var res = ParseDeleteStatement(); if (res != null) res.IsIndependent = true; return res; }
            if (symbol == Symbols.KW_DEBUGGER) { var res = ParseDebuggerStatement(); if (res != null) res.IsIndependent = true; return res; }


            // Expression Statement
            var exp = ParseExpression(0); // 0 is lowest precedence

            if (exp == null)
            {
                // If we are here, we have a token that is not a statement start, and not start of expression.
                // This is a syntax error.
                var token = this.Lexer.LookAtHead();
                throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, token, $"Unexpected token: {token.Value}");
            }

            var semiRange = this.Lexer.NextRangeOfKind(Symbols.PT_SEMICOLON);

            var stmt = new ExpressionStatement(exp);
            stmt.IsIndependent = true;
            SetRange(stmt, exp.Range, semiRange);
            return stmt;
        }

        private void RejectGlobalNonDeclareStatement(Statement node)
        {
            if (!Root.IsGlobalDeclarationFile)
            {
                return;
            }

            if (node is VariableDeclaration { IsDeclare: true } ||
                node is FunctionDeclaration function && (function.Flags & FunctionFlags.Declare) != 0 ||
                node is FunctionTypeDeclaration { IsDeclare: true } ||
                node is AmbientDeclaration)
            {
                return;
            }

            throw new AuroraCompilationException(
                AuroraCompilationStage.Parsing,
                Lexer.FullPath,
                node.Range,
                "@global() declaration files only allow declare statements.");
        }

        // =================================================================================
        // Pratt Parsing for Expressions
        // =================================================================================

        private const int TypeAssertionPrecedence = 14;

        private Expression ParseExpression(int precedence)
        {
            var symbol = this.Lexer.PeekSymbol();
            if (this.Lexer.IsAtEnd || symbol == Symbols.PT_SEMICOLON || symbol == Symbols.PT_RIGHTPARENTHESIS ||
                symbol == Symbols.PT_RIGHTBRACKET || symbol == Symbols.PT_RIGHTBRACE || symbol == Symbols.PT_COMMA)
            {
                return null;
            }

            Expression expression;
            if (CanParsePrefixWithoutToken(symbol))
            {
                var prefixSymbol = this.Lexer.NextSymbol(out var prefixRange);
                expression = ParsePrefix(prefixSymbol, prefixRange);
            }
            else
            {
                var startToken = this.Lexer.Next();
                expression = ParsePrefix(startToken);
            }
            if (expression == null) return null;

            while (true)
            {
                if (precedence < TypeAssertionPrecedence &&
                    PeekToken(0) is IdentifierToken { Value: "as" })
                {
                    expression = ParseTypeAssertion(expression);
                    continue;
                }

                if (precedence >= GetPrecedence(this.Lexer.PeekSymbol()))
                {
                    break;
                }

                var opSymbol = this.Lexer.NextSymbol(out var opRange);
                var op = Operator.FromSymbols(opSymbol, true); // Infix/Postfix
                expression = ParseInfix(expression, opSymbol, opRange, op);
                if (expression == null) break;
            }

            return expression;
        }

        private Expression ParseTypeAssertion(Expression value)
        {
            var asToken = this.Lexer.NextOfKind<IdentifierToken>();
            var type = ParseTypeReference();

            return SetRange(
                new CheckExpression(
                    value,
                    asToken,
                    type.Qualifier,
                    type.Token),
                value.Range,
                type.Token.Range);
        }

        private Expression ParsePrefix(Token token)
        {
            if (token.Symbol == Symbols.KW_TDOC)
            {
                var value = ParseTDocValue();
                if (value == null)
                {
                    throw new AuroraCompilationException(
                        AuroraCompilationStage.Parsing,
                        this.Lexer.FullPath,
                        token,
                        "tdoc requires a value.");
                }
                return SetRange(value, token.Range, value.Range);
            }
            // Literals
            if (token is ValueToken vt)
            {
                if (vt.Type == Tokens.ValueType.StringTemplate) return ParseStringTemplate((StringTemplateToken)vt);
                if (vt is NumberToken { IsInt64MinMagnitude: true })
                {
                    throw new AuroraCompilationException(
                        AuroraCompilationStage.Parsing,
                        this.Lexer.FullPath,
                        vt,
                        "The Int64 minimum magnitude is only valid with a leading minus.");
                }
                return SetRange(new LiteralExpression(vt), vt.Range, vt.Range);
            }
            if (token is IdentifierToken it) return SetRange(new NameExpression(it), it.Range, it.Range);

            // Grouping (
            if (token.Symbol == Symbols.PT_LEFTPARENTHESIS)
            {
                if (TryParseNumericCast(token.Range, out var cast)) return cast;
                using (scopeStack.Scope(ScopeType.GROUP))
                {
                    var group = new GroupExpression(Operator.Grouping);
                    if (this.Lexer.TestSymbol(Symbols.PT_RIGHTPARENTHESIS))
                    {
                        this.Lexer.Expect(Symbols.PT_RIGHTPARENTHESIS);
                        return group;
                    }
                    while (true)
                    {
                        var exp = ParseExpression(0);
                        if (exp != null) group.AddExpression(exp);
                        if (this.Lexer.TestNext(Symbols.PT_COMMA)) continue;
                        break;
                    }
                    var rightParen = this.Lexer.NextRangeOfKind(Symbols.PT_RIGHTPARENTHESIS);
                    return SetRange(group, token.Range, rightParen);
                }

            }

            // Array Literal [
            if (token.Symbol == Symbols.PT_LEFTBRACKET)
            {
                var arrayLiteral = new ArrayLiteralExpression();
                if (!this.Lexer.TestSymbol(Symbols.PT_RIGHTBRACKET))
                {
                    while (true)
                    {
                        var exp = ParseExpression(0);
                        if (exp != null)
                            arrayLiteral.AddElement(exp);
                        else
                        {
                            var nullLiteral = new LiteralExpression(new NullToken());
                            arrayLiteral.AddElement(nullLiteral);
                        }

                        if (this.Lexer.TestSymbol(Symbols.PT_RIGHTBRACKET)) break;
                        this.Lexer.Expect(Symbols.PT_COMMA);
                    }
                }
                var rightBracket = this.Lexer.NextRangeOfKind(Symbols.PT_RIGHTBRACKET);
                return SetRange(arrayLiteral, token.Range, rightBracket);
            }

            // Object Literal {
            if (token.Symbol == Symbols.PT_LEFTBRACE)
            {
                this.Lexer.RollBack();
                return ParseObjectConstructor();
            }


            // Spread Operator (...)
            if (token.Symbol == Symbols.OP_SPREAD)
            {
                var value = ParseExpression(0); // Lowest precedence
                if (value == null)
                {
                    throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, token, "Spread requires an expression.");
                }
                var spread = new SpreadExpression(value);
                return SetRange(spread, token.Range, (value != null ? value.Range : token.Range));
            }

            // Unary Prefix Operators (!, -, ++, --, ~, typeof, new, ...)
            if (IsPrefixOperator(token.Symbol))
            {
                var op = Operator.FromSymbols(token.Symbol, false);

                // Special case for 'new'
                if (op == Operator.New)
                {
                    return ParseNewExpression(op, token.Range, token);
                }

                if (op == Operator.Negate &&
                    TryParseInt64MinLiteralNegation(token.Range, out var minimum))
                {
                    return minimum;
                }

                // Normal Unary
                var rightUnary = ParseExpression(op.Precedence);
                if (op == Operator.PreIncrement || op == Operator.PreDecrement)
                {
                    EnsureMutationTarget(rightUnary, op);
                }
                var expression = new UnaryExpression(op, UnaryType.Prefix, rightUnary);
                // SetDebug(expression, token); // Redundant if already handled
                if (rightUnary != null) expression.Range = MergeRanges(token.Range, rightUnary.Range);
                return expression;
            }



            throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, token, $"Unknown prefix token: {token.Value}");
        }

        private Expression ParsePrefix(Symbols symbol, SourceSpan range)
        {
            // Grouping (
            if (symbol == Symbols.PT_LEFTPARENTHESIS)
            {
                if (TryParseNumericCast(range, out var cast)) return cast;
                using (scopeStack.Scope(ScopeType.GROUP))
                {
                    var group = new GroupExpression(Operator.Grouping);
                    if (this.Lexer.TestSymbol(Symbols.PT_RIGHTPARENTHESIS))
                    {
                        var rightParen = this.Lexer.NextRangeOfKind(Symbols.PT_RIGHTPARENTHESIS);
                        return SetRange(group, range, rightParen);
                    }
                    while (true)
                    {
                        var exp = ParseExpression(0);
                        if (exp != null) group.AddExpression(exp);
                        if (this.Lexer.TestNext(Symbols.PT_COMMA)) continue;
                        break;
                    }
                    var rightParenRange = this.Lexer.NextRangeOfKind(Symbols.PT_RIGHTPARENTHESIS);
                    return SetRange(group, range, rightParenRange);
                }
            }

            // Array Literal [
            if (symbol == Symbols.PT_LEFTBRACKET)
            {
                var arrayLiteral = new ArrayLiteralExpression();
                if (!this.Lexer.TestSymbol(Symbols.PT_RIGHTBRACKET))
                {
                    while (true)
                    {
                        var exp = ParseExpression(0);
                        if (exp != null)
                            arrayLiteral.AddElement(exp);
                        else
                        {
                            var nullLiteral = new LiteralExpression(new NullToken());
                            arrayLiteral.AddElement(nullLiteral);
                        }

                        if (this.Lexer.TestSymbol(Symbols.PT_RIGHTBRACKET)) break;
                        this.Lexer.Expect(Symbols.PT_COMMA);
                    }
                }
                var rightBracket = this.Lexer.NextRangeOfKind(Symbols.PT_RIGHTBRACKET);
                return SetRange(arrayLiteral, range, rightBracket);
            }

            // Object Literal {
            if (symbol == Symbols.PT_LEFTBRACE)
            {
                return ParseObjectConstructor(range);
            }

            // Spread Operator (...)
            if (symbol == Symbols.OP_SPREAD)
            {
                var value = ParseExpression(0); // Lowest precedence
                if (value == null)
                {
                    var token = new OperatorToken { Symbol = symbol, Value = symbol?.Name, Range = range };
                    throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, token, "Spread requires an expression.");
                }
                var spread = new SpreadExpression(value);
                return SetRange(spread, range, (value != null ? value.Range : range));
            }

            // Unary Prefix Operators (!, -, ++, --, ~, typeof, new, ...)
            if (IsPrefixOperator(symbol))
            {
                var op = Operator.FromSymbols(symbol, false);

                if (op == Operator.New)
                {
                    var token = new OperatorToken { Symbol = symbol, Value = symbol?.Name, Range = range };
                    return ParseNewExpression(op, range, token);
                }

                if (op == Operator.Negate &&
                    TryParseInt64MinLiteralNegation(range, out var minimum))
                {
                    return minimum;
                }

                var rightUnary = ParseExpression(op.Precedence);
                if (op == Operator.PreIncrement || op == Operator.PreDecrement)
                {
                    EnsureMutationTarget(rightUnary, op);
                }
                var expression = new UnaryExpression(op, UnaryType.Prefix, rightUnary);
                if (rightUnary != null) expression.Range = MergeRanges(range, rightUnary.Range);
                return expression;
            }

            var unexpected = new OperatorToken { Symbol = symbol, Value = symbol?.Name, Range = range };
            throw new AuroraCompilationException(AuroraCompilationStage.Parsing, this.Lexer.FullPath, unexpected, $"Unknown prefix token: {unexpected.Value}");
        }

        private bool TryParseNumericCast(SourceSpan start, out Expression expression)
        {
            expression = null;
            if (Lexer.LookAtHead() is not IdentifierToken { Value: "int32" } type)
                return false;
            var snapshot = Lexer.CreateSnapshot();
            Lexer.Next();
            if (!Lexer.TestNext(Symbols.PT_RIGHTPARENTHESIS))
            {
                Lexer.RestoreSnapshot(snapshot);
                return false;
            }
            var value = ParseExpression(Operator.Negate.Precedence);
            if (value == null)
                throw new AuroraCompilationException(AuroraCompilationStage.Parsing,
                    Lexer.FullPath, type, "A numeric cast requires an operand.");
            expression = SetRange(new NumericCastExpression(value, type), start, value.Range);
            return true;
        }

        private bool TryParseInt64MinLiteralNegation(
            SourceSpan prefixRange,
            out Expression expression)
        {
            if (this.Lexer.LookAtHead() is not NumberToken
                {
                    IsInt64MinMagnitude: true
                } number)
            {
                expression = null;
                return false;
            }

            this.Lexer.Next();
            var literal = SetRange(
                new LiteralExpression(number),
                number.Range,
                number.Range);
            var unary = new UnaryExpression(
                Operator.Negate,
                UnaryType.Prefix,
                literal);
            expression = SetRange(unary, prefixRange, number.Range);
            return true;
        }

        private Expression ParseInfix(Expression left, Symbols opSymbol, SourceSpan opRange, Operator op)
        {
            // Member Access .
            if (opSymbol == Symbols.PT_DOT)
            {

                var identifier = this.Lexer.NextOfToken<IdentifierToken, KeywordToken>();
                var dotExp = new GetPropertyExpression(Operator.MemberAccess, left, new NameExpression(identifier));
                return SetRange(dotExp, left.Range, identifier.Range);
            }
